homelab-k3s/k3s/apps/market-research/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-research-public
  namespace: market-research
spec:
  ingressClassName: traefik
  rules:
    - host: scanner.clusterberry.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: market-frontend-service
                port:
                  number: 8080
